[tool.poetry]
name = "imagecolorizer"
version = "0.1.0"
description = "App that colorizes black and white images"
authors = ["Tina Hu <hwt0106@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tensorflow = "^2.7.0"
pytube = "^11.0.2"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
